<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.luoboduner.moo.tool</groupId>
    <artifactId>MooTool</artifactId>
    <version>1.6.1</version>
    <packaging>jar</packaging>

    <name>MooTool</name>
    <url>http://www.luoboduner.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <java.version>21</java.version>
        <logback.version>1.4.11</logback.version>
        <emoji-java.version>5.1.1</emoji-java.version>
        <hutool-all.version>5.8.22</hutool-all.version>
        <forms_rt.version>7.0.3</forms_rt.version>
        <fastjson.version>2.0.40</fastjson.version>
        <lombok.version>1.18.30</lombok.version>
        <mybatis.version>3.5.13</mybatis.version>
        <sqlite-jdbc.version>3.43.0.0</sqlite-jdbc.version>
        <junit.version>4.13.2</junit.version>
        <commons-lang3.version>3.13.0</commons-lang3.version>
        <guava.version>32.1.2-jre</guava.version>
        <okhttp.version>4.11.0</okhttp.version>
        <google.zxing.core.version>3.5.1</google.zxing.core.version>
        <flatlaf.version>3.4.1</flatlaf.version>
        <flatlaf-extras.version>3.4.1</flatlaf-extras.version>
        <flatlaf-intellij-themes.version>3.4.1</flatlaf-intellij-themes.version>
        <flatlaf-fonts-jetbrains-mono.version>2.304</flatlaf-fonts-jetbrains-mono.version>
        <flatlaf-fonts-inter.version>4.0</flatlaf-fonts-inter.version>
        <rsyntaxtextarea.version>3.5.0</rsyntaxtextarea.version>
        <sql-formatter.version>2.0.4</sql-formatter.version>
        <google-java-format.version>1.18.1</google-java-format.version>
        <!--        <jSystemThemeDetector.version>3.8</jSystemThemeDetector.version>-->
        <cron-utils.version>9.2.1</cron-utils.version>
        <jna.version>5.13.0</jna.version>
        <oshi-core.version>6.4.6</oshi-core.version>
        <jfa.version>1.2.0</jfa.version>
        <versioncompare.version>1.5.0</versioncompare.version>
        <groovy.version>4.0.15</groovy.version>
        <jsoup.version>1.16.2</jsoup.version>
        <jalopy.version>1.5rc3</jalopy.version>
        <itextpdf.version>5.5.1</itextpdf.version>
        <snakeyaml.version>1.23</snakeyaml.version>
    </properties>

    <repositories>
        <repository>
            <id>mvnrepository.com</id>
            <url>https://mvnrepository.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>oss.sonatype.org</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.vdurmont</groupId>
            <artifactId>emoji-java</artifactId>
            <version>${emoji-java.version}</version>
        </dependency>

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool-all.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>junit-vintage-engine</artifactId>
                    <groupId>org.junit.vintage</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--GUI Designer -> binary class files-->
        <dependency>
            <groupId>com.intellij</groupId>
            <artifactId>forms_rt</artifactId>
            <version>${forms_rt.version}</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>${mybatis.version}</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite-jdbc.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>kotlin-stdlib-common</artifactId>
                    <groupId>org.jetbrains.kotlin</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>${google.zxing.core.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlaf.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>${flatlaf-extras.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-intellij-themes</artifactId>
            <version>${flatlaf-intellij-themes.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-fonts-jetbrains-mono</artifactId>
            <version>${flatlaf-fonts-jetbrains-mono.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-fonts-inter</artifactId>
            <version>${flatlaf-fonts-inter.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fifesoft/rsyntaxtextarea -->
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>${rsyntaxtextarea.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.vertical-blank</groupId>
            <artifactId>sql-formatter</artifactId>
            <version>${sql-formatter.version}</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.google.googlejavaformat</groupId>-->
        <!--            <artifactId>google-java-format</artifactId>-->
        <!--            <version>${google-java-format.version}</version>-->
        <!--            <exclusions>-->
        <!--                <exclusion>-->
        <!--                    <artifactId>guava</artifactId>-->
        <!--                    <groupId>com.google.guava</groupId>-->
        <!--                </exclusion>-->
        <!--            </exclusions>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.6.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.github.Dansoftowner</groupId>-->
        <!--            <artifactId>jSystemThemeDetector</artifactId>-->
        <!--            <version>${jSystemThemeDetector.version}</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${jna.version}</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>${jna.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cronutils</groupId>
            <artifactId>cron-utils</artifactId>
            <version>${cron-utils.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>${oshi-core.version}</version>
        </dependency>

        <dependency>
            <groupId>de.jangassen</groupId>
            <artifactId>jfa</artifactId>
            <version>${jfa.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.g00fy2</groupId>
            <artifactId>versioncompare</artifactId>
            <version>${versioncompare.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>${groovy.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <dependency>
            <groupId>jalopy</groupId>
            <artifactId>jalopy</artifactId>
            <version>${jalopy.version}</version>
        </dependency>

        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>${itextpdf.version}</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>

        <!--<dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>5.1.0</version>
        </dependency>-->

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-maven-plugin</artifactId>
                <version>1.3.6</version>
                <configuration>
                    <verbose>true</verbose>
                    <overwrite>true</overwrite>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.6</version>
                <configuration>
                    <bundleJre>true</bundleJre>
                    <mainClass>com.luoboduner.moo.tool.App</mainClass>
                    <generateInstaller>true</generateInstaller>
                    <!-- 这行不能被格式化为多行，否则会出错-->
                    <vmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>
                </configuration>
                <executions>
                                        <execution>
                                            <id>bundling-for-windows</id>
                                            <phase>package</phase>
                                            <goals>
                                                <goal>package</goal>
                                            </goals>
                                            <configuration>
                                                <platform>windows</platform>
                                                <createZipball>true</createZipball>
                                                <additionalModules>jdk.crypto.ec,jdk.charsets</additionalModules>
                                                <additionalResources>
                                                    <additionalResource>${name}.l4j.ini</additionalResource>
                                                </additionalResources>
                                                <administratorRequired>true</administratorRequired>
                                                <winConfig>

                                                    <!-- general properties -->
                                                    <generateSetup>true</generateSetup>
                                                    <generateMsi>true</generateMsi>
                                                    <generateMsm>true</generateMsm>

                                                    <!-- setup generation properties -->
                                                    <setupMode>installForAllUsers</setupMode>
                                                    <createDesktopIconTask>true</createDesktopIconTask>
                                                    <disableDirPage>false</disableDirPage>
                                                    <disableFinishedPage>false</disableFinishedPage>
                                                    <removeOldLibs>true</removeOldLibs>
                                                    <setupLanguages>
                                                        <english>compiler:Default.isl</english>
                                                        <!--                                    <spanish>compiler:Languages\Chinese.isl</spanish>-->
                                                    </setupLanguages>
                                                </winConfig>
                                            </configuration>
                                        </execution>
                    <!--                                        <execution>-->
                    <!--                                            <id>bundling-for-linux</id>-->
                    <!--                                            <phase>package</phase>-->
                    <!--                                            <goals>-->
                    <!--                                                <goal>package</goal>-->
                    <!--                                            </goals>-->
                    <!--                                            <configuration>-->
                    <!--                                                <platform>linux</platform>-->
                    <!--                                                <createTarball>true</createTarball>-->
                    <!--                                            <additionalModules>jdk.crypto.ec,jdk.charsets</additionalModules>-->
                    <!--                                            <additionalResources>-->
                    <!--                                                <additionalResource>${name}.l4j.ini</additionalResource>-->
                    <!--                                            </additionalResources>-->
                    <!--                                            </configuration>-->
                    <!--                                        </execution>-->
<!--                    <execution>-->
<!--                        <id>bundling-for-mac</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>package</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <platform>mac</platform>-->
<!--                            <createTarball>true</createTarball>-->
<!--                            <additionalModules>jdk.crypto.ec,jdk.charsets</additionalModules>-->
<!--                            <additionalResources>-->
<!--                                <additionalResource>${name}.l4j.ini</additionalResource>-->
<!--                            </additionalResources>-->
<!--                        </configuration>-->
<!--                    </execution>-->
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
